aval-poc-app/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tpp-ingress
  annotations:
    networking.gke.io/v1beta1.FrontendConfig: "tpp-frontend-config"
spec:
  tls:
    - hosts:
        - tppdemo.encore.forgerock.org
      secretName: spsslcert
  rules:
    - host: tppdemo.encore.forgerock.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tpp
                port:
                  number: 80
